WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139933
DumpRenderTree crashes are mis-reported as timeouts on Yosemite
https://bugs.webkit.org/show_bug.cgi?id=139933
Summary
DumpRenderTree crashes are mis-reported as timeouts on Yosemite
Alexey Proskuryakov
Reported
2014-12-23 22:35:54 PST
Generating a crash log takes ~2 minutes on my machine, which is longer than what run-webkit-tests waits before deciding that the tool crashed. Looking at bots, crashes are mis-reported as timeouts too. See also: <
rdar://problem/18701447
>.
Attachments
proposed fix
(3.35 KB, patch)
2014-12-23 23:16 PST
,
Alexey Proskuryakov
dbates
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-12-23 23:16:09 PST
Created
attachment 243727
[details]
proposed fix
Daniel Bates
Comment 2
2014-12-23 23:51:14 PST
Comment on
attachment 243727
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=243727&action=review
> Tools/DumpRenderTree/mac/DumpRenderTree.mm:1141 > NSString *identifier = [[NSBundle mainBundle] bundleIdentifier]; > const char *stdinPath = [[NSString stringWithFormat:@"/tmp/%@_IN", identifier] UTF8String]; > const char *stdoutPath = [[NSString stringWithFormat:@"/tmp/%@_OUT", identifier] UTF8String];
This code (lines 1139 thru 1149 in the proposed patch) is specific to the iOS LayoutTestRelay infrastructure (*) and hence should be guarded with PLATFORM(IOS). That is, we should only move the SIGNAL(3) calls outside the PLATFORM(IOS)-guard (lines 1151 thru 1154 in the proposed patch). (*) On iOS we indirectly launch DumpRenderTree.app/WebKitTestRunnerApp.app using a helper app, LayoutTestRelay. We use FIFOs (see MKFIFO(1)) as the communication medium between LayoutTestRelay and DumpRenderTree.app/WebKitTestRunnerApp.app instead of using pipes because of limitations with respect to launching a process in the iOS Simulator.
Alexey Proskuryakov
Comment 3
2014-12-24 00:35:20 PST
Ah, so that's what this sorcery is about. Thanks! Committed <
http://trac.webkit.org/r177722
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug