DumpRenderTree crashes are mis-reported as timeouts on Yosemite https://bugs.webkit.org/show_bug.cgi?id=139933

Reviewed by Daniel Bates.

Crash logs take a very long time to be generated on Yosemite (rdar://problem/18701447),
and there is no way for run-webkit-tests to tell a crashed process from a frozen one
until ReportCrash lets it go.

Reuse existing machinery that tells run-webkit-tests about crashes. The script may
even get the actual crash log eventually - even when it times out waiting for the log, it
makes a second lookup at the very end, after all tests finish. There may be further
improvements needed here, but this small fix addresses most cases that happen in practice.

* DumpRenderTree/mac/DumpRenderTree.mm:
(writeCrashedMessageOnFatalError):
(dumpRenderTree):
Removed PLATFORM(IOS) ifdefs, this code is just as helpful on Mac.

* Scripts/webkitpy/port/driver.py: (Driver._check_for_driver_crash): Removed an
unhelpful comment.



Canonical link: https://commits.webkit.org/157880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177722 268f45cc-cd09-0410-ab3c-d52691b4dbfc